--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,7 @@ set(SRC_LIST
     frame_processing/default_scene_detector.cpp
     frame_processing/scene_detector.cpp
     frame_processing/show_stream_detector.cpp
+    frame_processing/face_detector.cpp
     frame_processing/vfile_scene_detector.cpp
     video_streaming/image_window.cpp
     video_streaming/webcam_video_stream.cpp
